--- a/reservas.html
+++ b/reservas.html
@@ -43,11 +43,11 @@
             </form>
         </div>
             <div class="calendarios">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FArgentina%2FCordoba&showTitle=0&showPrint=0&showTz=0&showCalendars=0&src=bWF0aWFzaGllbnplbjA4QGdtYWlsLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=Y2xhc3Nyb29tMTE4MTIyNjQ0MTM2NjA5MjQ2NDM5QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZmFtaWx5MTEwNDI5NTQ0NTgxOTYyNzc4MThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZXMuYXIjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y2xhc3Nyb29tMTExNzEyMTc3MjE2MzkzOTg5OTkzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=c2FudGFmZXZpcnR1YWwuZWR1LmFyX2NsYXNzcm9vbTdkNWM0ZjljQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y2xhc3Nyb29tMTA2MTEwODMxODczMzQ0NzI4MDk5QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y2xhc3Nyb29tMTExMDI3NTQ3NjU2NTM0OTY4ODM3QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039BE5&color=%2333B679&color=%23b80672&color=%23F4511E&color=%237986CB&color=%23202124&color=%23007b83&color=%23007b83&color=%23202124" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no" class="calendario"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FArgentina%2FCordoba&showTitle=0&showNav=0&showDate=0&showTz=0&showTabs=0&showCalendars=0&showPrint=0&src=YzQ1YTk3ZTlhNzc0ZTkyYzM3MWM3MTU3MTMzMGZiYzA2NzU2MzExY2NhOWUwMTk0NjkyYTlhYTExNjFhM2EwMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
             <div class="botonMultiple">
                 <form action="#" class="elegir">
-                    <legend id="" class="">ELEGIR HABITACION</legend>
+                    <legend id="" class="">Elegir Habitacion</legend>
                     <select name="tipos" id="">
                       <option value="doble">Habitacion doble</option>
                       <option value="tripe">Habitacion tripe</option>
