--- a/reservas.html
+++ b/reservas.html
@@ -43,7 +43,7 @@
             </form>
         </div>
             <div class="calendarios">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FArgentina%2FCordoba&showTitle=0&showNav=0&showDate=0&showTz=0&showTabs=0&showCalendars=0&showPrint=0&src=YzQ1YTk3ZTlhNzc0ZTkyYzM3MWM3MTU3MTMzMGZiYzA2NzU2MzExY2NhOWUwMTk0NjkyYTlhYTExNjFhM2EwMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FArgentina%2FCordoba&showTitle=0&showNav=0&showDate=0&showTz=0&showTabs=0&showCalendars=0&showPrint=0&src=YzQ1YTk3ZTlhNzc0ZTkyYzM3MWM3MTU3MTMzMGZiYzA2NzU2MzExY2NhOWUwMTk0NjkyYTlhYTExNjFhM2EwMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no" class="calendario"></iframe>
             </div>
             <div class="botonMultiple">
                 <form action="#" class="elegir">
