--- a/reservas.html
+++ b/reservas.html
@@ -36,7 +36,7 @@
                     <input type="text" name="nombre" id="nombre" placeholder="Nombre y apellido">
                     <label for="number"> DNI: </label>
                     <input type="number" name="number" id="DNI" placeholder="Ingrese su DNI">
-                    <label for="text"> direccion: </label>
+                    <label for="text"> Direccion: </label>
                     <input type="tel" name="tel" id="tel" placeholder="Direccion" >
                     <label for="text"> Localidad: </label>
                     <input type="tel" name="tel" id="tel" placeholder="Localidad" >
@@ -55,8 +55,8 @@
                     </select>
                     <BR></BR>
                     <div class="btn">
-                        <button class="btn--default" type="submit">Enviar reserva</button>
-                        <button class="btn--default" type="submit">cancelar</button>
+                        <button class="btn--default" type="submit">Enviar Reserva</button>
+                        <button class="btn--default" type="submit">Cancelar</button>
                     </div>
               </form>
             </div>
